<resources>

    <!-- General -->
    <string name="app_name">ProLang</string>
    <string name="top_app_bar_display">Programming Language App</string>
    <string name="top_app_bar_detail">Detail Language</string>
    <string name="creator_title">Creator</string>
    <string name="year_released_title">Year Released</string>
    <string name="file_extension_title">File Extension</string>
    <string name="use_cases_title">Use Cases</string>
    <string name="description_title">Description</string>
    <string name="documentation_title">Documentation</string>
    <string name="temporary_content_description">Logo of Programming Language</string>
    <string name="choose_browser">Open with web browser:</string>

    <!-- C -->
    <string name="c_name">C Language</string>
    <string name="c_creator">Dennis Ritchie</string>
    <string name="c_year_released">1972</string>
    <string name="c_file_extension">.c</string>
    <string name="c_use_cases">System Programming, Embedded Systems, Operating Systems</string>
    <string name="c_description">C is an efficient low-level programming language that is widely used for system development, including operating systems and applications that require high performance.</string>
    <string name="c_documentation_link">https://en.cppreference.com/w/c/language</string>

    <!-- C++ -->
    <string name="cpp_name">C++ Language</string>
    <string name="cpp_creator">Bjarne Stroustrup</string>
    <string name="cpp_year_released">1985</string>
    <string name="cpp_file_extension">.cpp</string>
    <string name="cpp_use_cases">Game Development, System Programming, High-Performance Applications</string>
    <string name="cpp_description">C++ is an extension of the C language with object-oriented programming features, used in game development, high-performance applications, and system software.</string>
    <string name="cpp_documentation_link">https://cplusplus.com/doc</string>

    <!-- C# -->
    <string name="csharp_name">C# Language</string>
    <string name="csharp_creator">Microsoft</string>
    <string name="csharp_year_released">2000</string>
    <string name="csharp_file_extension">.cs</string>
    <string name="csharp_use_cases">Desktop Applications, Web Applications, Game Development</string>
    <string name="csharp_description">C# is an object-oriented programming language developed by Microsoft, widely used for developing desktop, web, and game applications using the .NET platform.</string>
    <string name="csharp_documentation_link">https://learn.microsoft.com/en-us/dotnet/csharp</string>

    <!-- Java -->
    <string name="java_name">Java Language</string>
    <string name="java_creator">James Gosling</string>
    <string name="java_year_released">1995</string>
    <string name="java_file_extension">.java</string>
    <string name="java_use_cases">Enterprise Applications, Android Development, Web Development</string>
    <string name="java_description">Java is a popular object-oriented programming language, known for its portability, "Write Once, Run Anywhere". Widely used in enterprise and Android application development.</string>
    <string name="java_documentation_link">https://docs.oracle.com/en/java</string>

    <!-- JavaScript -->
    <string name="javascript_name">JavaScript Language</string>
    <string name="javascript_creator">Brendan Eich</string>
    <string name="javascript_year_released">1995</string>
    <string name="javascript_file_extension">.js</string>
    <string name="javascript_use_cases">Web Development, Front-End Development, Back-End Development</string>
    <string name="javascript_description">JavaScript is the primary programming language for web development, used to create dynamic and interactive web pages. It can be used on both the client-side (front-end) and server-side (back-end).</string>
    <string name="javascript_documentation_link">https://developer.mozilla.org/en-US/docs/Web/JavaScript</string>

    <!-- Kotlin -->
    <string name="kotlin_name">Kotlin Language</string>
    <string name="kotlin_creator">JetBrains</string>
    <string name="kotlin_year_released">2011</string>
    <string name="kotlin_file_extension">.kt</string>
    <string name="kotlin_use_cases">Android Development, Web Development, Server-Side Applications</string>
    <string name="kotlin_description">Kotlin is a modern programming language that is interoperable with Java, and is now the primary language for Android app development. Kotlin offers a more concise syntax and advanced features.</string>
    <string name="kotlin_documentation_link">https://kotlinlang.org/docs/home.html</string>

    <!-- PHP -->
    <string name="php_name">PHP Language</string>
    <string name="php_creator">Rasmus Lerdorf</string>
    <string name="php_year_released">1995</string>
    <string name="php_file_extension">.php</string>
    <string name="php_use_cases">Web Development, Dynamic Web, Server-Side Scripting</string>
    <string name="php_description">PHP is a programming language used primarily for server-side web development. It is widely used to build dynamic websites and web applications, and is the foundation of many content management systems (CMS) such as WordPress.</string>
    <string name="php_documentation_link">https://www.php.net/docs.php</string>

    <!-- Python -->
    <string name="python_name">Python Language</string>
    <string name="python_creator">Guido van Rossum</string>
    <string name="python_year_released">1991</string>
    <string name="python_file_extension">.py</string>
    <string name="python_use_cases">Web Development, Data Analysis, Artificial Intelligence, Machine Learning</string>
    <string name="python_description">Python is a programming language that is easy to learn and use, with clear and simple syntax. It is widely used in various fields such as web development, data analysis, and artificial intelligence.</string>
    <string name="python_documentation_link">https://docs.python.org/3</string>

    <!-- SQL -->
    <string name="sql_name">Structured Query Language</string>
    <string name="sql_creator">Donald D. Chamberlin dan Raymond F. Boyce</string>
    <string name="sql_year_released">1974</string>
    <string name="sql_file_extension">.sql</string>
    <string name="sql_use_cases">Database Management, Data Querying, Data Manipulation</string>
    <string name="sql_description">SQL (Structured Query Language) is a language used to manage and manipulate data in a relational database management system. SQL allows users to retrieve, insert, update, and delete data in a database.</string>
    <string name="sql_documentation_link">https://docs.data.world/documentation/sql/concepts/basic/intro.html</string>

    <!-- Swift -->
    <string name="swift_name">Swift Language</string>
    <string name="swift_creator">Apple</string>
    <string name="swift_year_released">2014</string>
    <string name="swift_file_extension">.swift</string>
    <string name="swift_use_cases">iOS Development, macOS Development, Server-Side Applications</string>
    <string name="swift_description">Swift is a fast and safe programming language developed by Apple for developing applications for iOS, macOS, and other apple products. Swift is designed to be easy to learn and use.</string>
    <string name="swift_documentation_link">https://www.swift.org/documentation</string>

</resources>