<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/backgroundColor"
    tools:context=".activity.DetailActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorSecondary"
        app:liftOnScroll="false">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:title="@string/top_app_bar_detail"
            app:titleTextColor="?attr/colorOnSecondary"
            app:titleTextAppearance="@style/TextAppearance.Material3.TitleLarge"
            app:titleCentered="true"
            app:navigationIcon="@drawable/arrow_back"
            app:navigationIconTint="?attr/colorOnSecondary"/>

    </com.google.android.material.appbar.AppBarLayout>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="85dp"
        android:layout_marginHorizontal="20dp"
        app:cardBackgroundColor="?attr/colorPrimary"
        app:cardElevation="4dp"
        app:strokeWidth="0dp"
        app:cardCornerRadius="12dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="24dp">

                <ImageView
                    android:id="@+id/imageViewLogo"
                    android:layout_width="75dp"
                    android:layout_height="75dp"
                    android:contentDescription="@string/temporary_content_description"
                    android:paddingBottom="8dp"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textViewName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="20dp"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/imageViewLogo"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"/>

                <TextView
                    android:id="@+id/textViewCreatorTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/creator_title"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewName"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewCreator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewCreatorTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewYearReleasedTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/year_released_title"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewCreator"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewYearReleased"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewYearReleasedTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewFileExtensionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/file_extension_title"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewYearReleased"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewFileExtension"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewFileExtensionTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewUseCasesTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/use_cases_title"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewFileExtension"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewUseCases"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewUseCasesTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewDescriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/description_title"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewUseCases"
                    app:layout_constraintStart_toStartOf="parent" />

                <TextView
                    android:id="@+id/textViewDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingBottom="16dp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewDescriptionTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewDocumentationLinkTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/documentation_title"
                    android:textStyle="bold"
                    android:textSize="16sp"
                    android:textColor="?attr/colorOnPrimary"
                    app:layout_constraintTop_toBottomOf="@id/textViewDescription"
                    app:layout_constraintStart_toStartOf="parent"/>

                <TextView
                    android:id="@+id/textViewDocumentationLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="?attr/colorOnTertiary"
                    android:clickable="true"
                    android:focusable="true"
                    app:layout_constraintTop_toBottomOf="@id/textViewDocumentationLinkTitle"
                    app:layout_constraintStart_toStartOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </ScrollView>

    </com.google.android.material.card.MaterialCardView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>